k8s/networking/pod-gateway/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wg-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: pod-gateway
      app.kubernetes.io/name: pod-gateway
  policyTypes:
    - Egress
  egress:
  - ports:
    - port: 51820
      protocol: UDP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
